2016-05-01  Werner Lemberg  <wl@gnu.org>

	[ftinspect] Refine signal for HintingModeComboBox.

	* src/ftinspect.cpp (MainGUI::checkHintingMode): Grey out `slight'
	hinting item in antiAliasingComboBox if not in auto-hinting mode.
	Also set a different anti aliasing value for this case if `slight'
	was the current value.

	* src/ftinspect.h: Updated.

2016-05-01  Werner Lemberg  <wl@gnu.org>

	[ftinspect] Add signal for HintingModeComboBox.

	Also fix typo `hortizontal' -> `horizontal'.

	* src/ftinspect.cpp (MainGUI::checkHintingMode): New function.
	(MainGUI::createConnections): Add signal.

	* src/ftinspect.h: Updated.

2016-05-01  Werner Lemberg  <wl@gnu.org>

	[ftinspect] Improve combo box setup.

	* src/ftinspect.h (MainGUI): New enums `AntiAliasing',
	`HintingModes', and `LCDFilter'.

	* src/ftinspect.cpp (MainGUI::createLayout): Use new enums to set
	items in combo boxes.
	Also simplify computation of maximum width.

2016-04-30  Werner Lemberg  <wl@gnu.org>

	* src/ftinspect.cpp (MainGUI::createLayout): Fix memory leak.

2016-04-30  Werner Lemberg  <wl@gnu.org>

	[ftinspect] A new Qt based variant for ftgrid.  GUI draft only.

	The idea is to eventually integrate the functionality of ftview,
	ftkern, and ftdiff also.

	The code compiles fine with both Qt4 and Qt5; it doesn't do anything
	yet beyond showing how the GUI looks like.

	* src/ftinspect.cpp, src/ftinspect.h: New source code files.

	* src/ftinspect.pro: New qmake input file.

2016-04-08  Werner Lemberg  <wl@gnu.org>

	[ftview] Avoid hangs with bitmap only fonts.

	Problem reported by Hin-Tak Leung <htl10@users.sourceforge.net>.

	* src/ftview.c (Render_Text, Render_Waterfall): Escape loop if not a
	single glyph could be rendered.

2016-03-18  Werner Lemberg  <wl@gnu.org>

	* graph/x11/rules.mk (X11_LIB): Also append `/lib64'.

2016-03-02  Werner Lemberg  <wl@gnu.org>

	[ftgrid] Use colors for dot numbers.

	We now have bitmap rendering also, and black numbers on a black